copy and paste issue and alignment error

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -68,7 +68,7 @@
   overflow: hidden;
   padding: 0;
   margin: 0;
-  background-color: #trpChatInputBoxTextArea;
+  background-color: @trpBgColor2;
 }
 
 .trpChatItem {
